<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragment.DescLocationFragment.DescLocationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bookmark"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/namaTempatWisata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namaTempatWisata"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/descTempatWisata"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:text="@string/descTempatWisata"
            app:layout_constraintTop_toBottomOf="@id/namaTempatWisata"
            app:layout_constraintStart_toStartOf="parent"
            android:justificationMode="inter_word"
            />

        <Button
            android:id="@+id/button_forum"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="Tempat Diskusi"
            android:backgroundTint="#5CA6DB"
            android:textStyle="bold"
            android:textColor="?android:attr/windowBackground"
            android:fontFamily="@font/robotomono"

            app:layout_constraintTop_toBottomOf="@id/descTempatWisata"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/judulReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:text="@string/review"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/button_forum"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/judulReview"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_review"
            />

        <Button
            android:id="@+id/addReviewButton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:layout_marginTop="24dp"
            android:text="@string/addReview"
            android:backgroundTint="#5CA6DB"
            android:textStyle="bold"
            android:textColor="?android:attr/windowBackground"
            android:fontFamily="@font/robotomono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reviewContainer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>